Page titles are smaller on mobile to prevent them to be on two lines as ofen as possible.

--- a/resources/web/static/css/main.css
+++ b/resources/web/static/css/main.css
@@ -104,6 +104,7 @@ section[class*="SiteHeader--"]::after {
 
 @media only screen and (max-width: 768px) {
     body { padding-bottom: calc(75px - 1rem); }
+    .PageTitle { font-size: 1.5rem; }
 }
 
 /* Fix uglyness */
